--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         "phpunit/phpunit": "^9",
         "brain/monkey": "2.*",
         "mockery/mockery": "dev-master"
-    }
+    },
+    "name": "bmlt-enabled/wordpress-bmlt-workflow",
+    "description": "dev dependencies for bmlt-workflow",
+    "license": "MIT"
 }
