--- a/releases.json
+++ b/releases.json
@@ -2,5 +2,7 @@
     "slug":"wordpress-bmlt-workflow",
     "new_version":"0.4.4",
     "url":"https://github.com/bmlt-enabled/wordpress-bmlt-workflow/releases/latest",
-    "package":"https://github.com/bmlt-enabled/wordpress-bmlt-workflow/releases/download/0.4.4/bmlt-workflow-0.4.4.zip"
+    "package":"https://github.com/bmlt-enabled/wordpress-bmlt-workflow/releases/download/0.4.4/bmlt-workflow-0.4.4.zip",
+    "tested":"6.0",
+    "upgrade_notice":"hows it going"
 }
