--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -48,6 +48,9 @@ jobs:
 
   package:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     #    needs: [ tests ] # tmp let job run if tests fail
@@ -60,6 +63,7 @@ jobs:
         run: |
           export ARTIFACT_FILE=bmlt-workflow-${GITHUB_RUN_NUMBER}-${GITHUB_SHA}
           export ARTIFACT_FILENAME=${ARTIFACT_FILE}.zip
+          echo "ARTIFACT_FILENAME=${ARTIFACT_FILENAME}" >> $GITHUB_ENV
           git archive --format=zip --output=${ARTIFACT_FILENAME} --prefix=${ARTIFACT_FILE}/ HEAD
           unzip ${ARTIFACT_FILENAME}
           rm ${ARTIFACT_FILENAME}
@@ -69,17 +73,17 @@ jobs:
           zip -r -9 ${ARTIFACT_FILENAME} ${ARTIFACT_FILE}
           mkdir artifacts/
           mv ${ARTIFACT_FILENAME} artifacts/
-      - name: Upload artifact to S3
-        id: upload-artifact-to-s3
-        uses: jakejarvis/s3-sync-action@master
+
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          args: --acl public-read --follow-symlinks
-        env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: artifacts/
-          DEST_DIR: bmlt-workflow
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions/gh-ci-s3-artifact
+          role-session-name: gh-actions-bmlt-workflow
+          aws-region: us-east-1
+
+      - name: copy artifact to s3
+        run: |
+          aws s3 cp artifacts/${ARTIFACT_FILENAME} s3://${{ secrets.S3_BUCKET }}/bmlt-workflow/${ARTIFACT_FILENAME}
 
       - uses: act10ns/slack@v1
         with:
