--- a/tests/testcafe/setup/auto-config.inc.php.in
+++ b/tests/testcafe/setup/auto-config.inc.php.in
@@ -39,7 +39,7 @@ defined( 'BMLT_EXEC' ) or die ( 'Cannot Execute Directly' );	// Makes sure that 
 												// (ignored, if $g_enable_email_contact or $include_service_body_admin_on_emails is FALSE)
 
 												// The server languages are supported b y default, the langs specified here add to them		
-												$format_lang_names = {};	//
+		$format_lang_names = array();	//
 	// These are 'hard-coded,' but can be changed later.
 
 		$time_format = 'g:i A'; // The PHP date() format for the times displayed.
