--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: mysql:5.7
     restart: always
     ports:
-      - 3306:3306
+      - 3305:3306
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
@@ -39,7 +39,6 @@ services:
       dockerfile: Dockerfile-wp6.0.3-php8.1
     depends_on:
       - db-php8-singlesite
-    command: /usr/local/bin/multisite-install.sh
     restart: always
     ports:
       - 8081:80
@@ -134,6 +133,38 @@ services:
     restart: always
     # ports:
     #   - 3309:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: somewordpress
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+
+  wordpress-php8-singlesite-bmlt3x:
+    build:
+      context: .
+      dockerfile: Dockerfile-wp6.0.3-php8.1
+    depends_on:
+      - db-php8-singlesite
+    restart: always
+    command: /usr/local/bin/wp-install.sh
+    ports:
+      - 8084:80
+      - 7447:443
+    environment:
+      WORDPRESS_DB_HOST: db-php8-singlesite-bmlt3x
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z\$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
+    volumes:
+      - ../:/var/www/html/wp-content/plugins
+      - ./logs/:/var/log/apache2
+
+  db-php8-singlesite-bmlt3x:
+    image: mysql:5.7
+    restart: always
+    ports:
+      - 3310:3306
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
