--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_HOST: wordpress-php8-singlesite
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
+      WORDPRESS_PORT: 80
     volumes:
       - ../:/var/www/html/wp-content/plugins/bmlt-workflow
       - ./logs/:/var/log/apache2
@@ -70,6 +71,8 @@ services:
       dockerfile: Dockerfile-wpmultisite-php8.1
     depends_on:
       - db-php8-multisitesingle
+    ports:
+      - 81:81
     command: /usr/local/bin/wp-multisite-install.sh
     restart: always
     tmpfs: /var/www/html
@@ -82,6 +85,7 @@ services:
       WORDPRESS_MULTISITE_INSTALL: true
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-multisitesingle
+      WORDPRESS_PORT: 81
     volumes:
       - ../:/var/www/html/wp-content/plugins
       - ./logs/:/var/log/apache2
@@ -105,6 +109,8 @@ services:
       - db-php8-multinetwork
     command: /usr/local/bin/wp-multisite-install.sh
     restart: always
+    ports:
+      - 82:82
     tmpfs: /var/www/html
     environment:
       WORDPRESS_DB_HOST: db-php8-multinetwork
@@ -115,6 +121,7 @@ services:
       WORDPRESS_MULTISITE_INSTALL: true
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-multinetwork
+      WORDPRESS_PORT: 82
     volumes:
       - ../:/var/www/html/wp-content/plugins
       - ./logs/:/var/log/apache2
@@ -139,6 +146,8 @@ services:
     tmpfs: /var/www/html
     restart: always
     command: /usr/local/bin/wp-install.sh
+    ports:
+      - 83:83
     environment:
       WORDPRESS_DB_HOST: db-php8-singlesite-bmlt3x
       WORDPRESS_DB_USER: wordpress
@@ -146,6 +155,7 @@ services:
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-singlesite-bmlt3x
+      WORDPRESS_PORT: 83
     volumes:
       - ../:/var/www/html/wp-content/plugins
       - ./logs/:/var/log/apache2
@@ -161,16 +171,16 @@ services:
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
 
-  testcafe:
-    build:
-      context: .
-      dockerfile: Dockerfile-testcafe
-    environment:
-      - NODE_PATH=/opt/testcafe/node_modules:/opt
-    tmpfs: /tmp
-    volumes:
-      - ../..:/testroot
-      - /var/run/docker.sock.raw:/var/run/docker.sock
-    # security_opt:
-    #   - seccomp:unconfined
-    entrypoint: ["/opt/testcafe/docker/testcafe-docker.sh", "firefox", "/testroot/bmlt-workflow/tests", "-S", "-s","path=/testroot/bmlt-workflow/tests/testcafe/screenshots,fullPage=true,thumbnails=false","--hostname","localhost","--retry-test-pages"]
+  # testcafe:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile-testcafe
+  #   environment:
+  #     - NODE_PATH=/opt/testcafe/node_modules:/opt
+  #   tmpfs: /tmp
+  #   volumes:
+  #     - ../..:/testroot
+  #     - /var/run/docker.sock.raw:/var/run/docker.sock
+  #   # security_opt:
+  #   #   - seccomp:unconfined
+  #   entrypoint: ["/opt/testcafe/docker/testcafe-docker.sh", "firefox", "/testroot/bmlt-workflow/tests", "-S", "-s","path=/testroot/bmlt-workflow/tests/testcafe/screenshots,fullPage=true,thumbnails=false","--hostname","localhost","--retry-test-pages"]
