--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       WORDPRESS_HOST: wordpress-php8-singlesite
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_PORT: 80
+      BMLT: 'bmlt2x'
+      BMLT_PORT: 8000
     volumes:
       - ../:/var/www/html/wp-content/plugins/bmlt-workflow
       - ./logs/:/var/log/apache2
@@ -162,6 +164,8 @@ services:
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-singlesite-bmlt3x
       WORDPRESS_PORT: 83
+      BMLT: 'bmlt3x'
+      BMLT_PORT: 8001
     volumes:
       - ../:/var/www/html/wp-content/plugins/bmlt-workflow
       - ./logs/:/var/log/apache2
