--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -94,6 +94,9 @@ services:
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-multisitesingle
       WORDPRESS_PORT: 81
+      NOPLUGIN: 'true'
+      BMLT: 'bmlt2x'
+      BMLT_PORT: 8000
     volumes:
       - ../:/var/www/html/wordpress-php8-multisitesingle/wp-content/plugins/bmlt-workflow
       - ./logs/:/var/log/apache2
@@ -130,6 +133,8 @@ services:
       WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
       WORDPRESS_HOST: wordpress-php8-multinetwork
       WORDPRESS_PORT: 82
+      BMLT: 'bmlt2x'
+      BMLT_PORT: 8000
     volumes:
       - ../:/var/www/html/wordpress-php8-multinetwork/wp-content/plugins/bmlt-workflow
       - ./logs/:/var/log/apache2
