--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,5 @@
     },
     "name": "bmlt-enabled/bmlt-workflow",
     "description": "dev dependencies for bmlt-workflow",
-    "license": "MIT",
-    "require": {
-        "phuml/phuml": "^6.1"
-    }
+    "license": "MIT"
 }
