Revert "update test cases"
This reverts commit d152f4ec294ce57334a8f9bd6545c8fff1ff06de.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -130,30 +130,30 @@ services:
       - ./logs/:/var/log/apache2
       - ../../wpcache:/root/.wp-cli/cache/core/
 
-  # wordpress-php8-singlesite-bmlt3x:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile-wp-php8.1
-  #   depends_on:
-  #     - wordpress-db
-  #   tmpfs: 
-  #     - /var/www/html
-  #     - /var/log
-  #   restart: always
-  #   command: /usr/local/bin/wp-install.sh
-  #   ports:
-  #     - 83:83
-  #   environment:
-  #     WORDPRESS_DB_HOST: wordpress-db
-  #     WORDPRESS_DB_USER: wordpress
-  #     WORDPRESS_DB_PASSWORD: wordpress
-  #     WORDPRESS_DB_NAME: wordpress-php8-singlesite-bmlt3x
-  #     WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
-  #     WORDPRESS_HOST: wordpress-php8-singlesite-bmlt3x
-  #     WORDPRESS_PORT: 83
-  #     BMLT: 'bmlt3x'
-  #     BMLT_PORT: 8001
-  #   volumes:
-  #     - ../:/var/www/html/wp-content/plugins/bmlt-workflow
-  #     - ./logs/:/var/log/apache2
-  #     - ../../wpcache:/root/.wp-cli/cache/core/
+  wordpress-php8-singlesite-bmlt3x:
+    build:
+      context: .
+      dockerfile: Dockerfile-wp-php8.1
+    depends_on:
+      - wordpress-db
+    tmpfs: 
+      - /var/www/html
+      - /var/log
+    restart: always
+    command: /usr/local/bin/wp-install.sh
+    ports:
+      - 83:83
+    environment:
+      WORDPRESS_DB_HOST: wordpress-db
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress-php8-singlesite-bmlt3x
+      WORDPRESS_NONCE_SALT: '4hJ:ZRFUAdfFEBq=z$$9+]Bk|\!1y8V,h#w4aNGy~o7u|BBR;u(ASi],u[Cp46qRQa'
+      WORDPRESS_HOST: wordpress-php8-singlesite-bmlt3x
+      WORDPRESS_PORT: 83
+      BMLT: 'bmlt3x'
+      BMLT_PORT: 8001
+    volumes:
+      - ../:/var/www/html/wp-content/plugins/bmlt-workflow
+      - ./logs/:/var/log/apache2
+      - ../../wpcache:/root/.wp-cli/cache/core/
