--- a/docker/Dockerfile-wp-php8.1
+++ b/docker/Dockerfile-wp-php8.1
@@ -22,9 +22,11 @@ RUN pecl install xdebug-3.1.2 && docker-php-ext-enable xdebug \
 RUN curl -o /usr/local/bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 COPY ./wpcli-user.sh /usr/local/bin/wp
 COPY ./wp-install.sh /usr/local/bin/wp-install.sh
+COPY ./sync-plugin.sh /usr/local/bin/sync-plugin.sh
 RUN chmod +x /usr/local/bin/wp
 RUN chmod +x /usr/local/bin/wp-cli.phar
 RUN chmod +x /usr/local/bin/wp-install.sh
+RUN chmod +x /usr/local/bin/sync-plugin.sh
 CMD /usr/local/bin/wp-install.sh
 
 EXPOSE 80
