fixes for #181 and #182

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       dockerfile: Dockerfile-wordpress-db
     restart: always
     tmpfs: /var/lib/mysql
+    platform: linux/x86_64
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
