--- a/docker/Dockerfile-wpmultisite-php8.1
+++ b/docker/Dockerfile-wpmultisite-php8.1
@@ -18,6 +18,7 @@ RUN pecl install xdebug-3.1.2 && docker-php-ext-enable xdebug \
     && echo "xdebug.idekey=IDEA_DEBUG" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_autostart=1" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_log=/tmp/xdebug.log" >> ${PHP_INI_PATH}
+RUN echo "Mutex posixsem" >> /etc/apache2/apache2.conf
 
 RUN curl -o /usr/local/bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 COPY ./wpcli-user.sh /usr/local/bin/wp
