--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,15 @@ package-lock.json
 /node_modules
 .userdetails.sh
 /tests/testcafe/setup/blank_bmlt.sql
-logs/
+/logs/
 /releases
 /coverage
 /akismet
 hello.php
-tests/testcafe/screenshots/
+/tests/testcafe/screenshots/**
 /docker/bmlt.env
 /docker/bmlt3x.env
 /docker/bmlt2x.env
+/tests/testcafe/**
+/docker/logs/**
+/tests/testcafe/uploads/**
