--- a/docker/Dockerfile-wpmultisite-php8.3
+++ b/docker/Dockerfile-wpmultisite-php8.3
@@ -9,7 +9,7 @@ RUN apt-get update && \
 
 ENV PHP_INI_PATH "/usr/local/etc/php/php.ini"
 
-RUN pecl install xdebug-3.1.2 && docker-php-ext-enable xdebug \
+RUN pecl install xdebug && docker-php-ext-enable xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_port=9000" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_enable=1" >> ${PHP_INI_PATH} \
